# multigrind

./: .gitignore  AuxokT3REMom8yP5TvuJQaUQUjtkHooQ48hTSQZiYd7W.json  Cargo.toml  README.md  rustfmt.toml  seeds
auxiliary/: Cargo.toml  README.md
auxiliary/src/: lib.rs  sdk.rs  utils.rs
auxiliary/src/instruction/: init.rs  mod.rs  sell.rs
auxiliary/src/squads_sdk/: config_transaction.rs  mod.rs  multisig_config.rs  multisig_create_v2.rs  proposal.rs
auxiliary/tests/: pda.rs
auxiliary/tests/fixtures/: README.md
grind/: Cargo.toml  README.md
grind/src/: fd_bs58_32.rs  lib.rs
retrieve/: Cargo.toml  README.md
retrieve/examples/: squads.rs
retrieve/src/: main.rs
