[package]
name = "retrieve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.7"
clap = { version = "4.4.16", features = ["derive"] }
solana-client = "1.17.15"
solana-sdk = "1.17.15"
tokio = "1.35.1"
